--- a/BrainMaster/app/src/main/res/layout/fragment_result.xml
+++ b/BrainMaster/app/src/main/res/layout/fragment_result.xml
@@ -1,31 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.ResultFragment"
-    android:padding="28dp">
+    android:padding="28dp"
+    tools:context=".ui.ResultFragment">
 
     <TextView
-        android:id="@+id/textViewResult"
+        android:id="@+id/textViewResultTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your Quiz Result"
-        android:textSize="40sp"
+        android:text="¡Game Finished!"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_chainStyle="packed"/>
 
-    <ImageView
+    <TextView
+        android:id="@+id/textViewFinalScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:layout_marginTop="16dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewResult"
-        app:layout_constraintVertical_chainStyle="packed"/>
+        app:layout_constraintTop_toBottomOf="@id/textViewResultTitle"
+        tools:text="Tu puntuación: 1 / 10" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:cardBackgroundColor="#000000"
+        app:cardCornerRadius="100dp"
+        app:cardElevation="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewFinalScore">
+
+        <ImageView
+            android:id="@+id/resultImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:padding="18dp"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/cry" />
+
+    </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/buttonPlayAgain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Play Again"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cardViewImage" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
