Adding styles to the app

--- a/BrainMaster/app/src/main/res/layout/fragment_main_menu.xml
+++ b/BrainMaster/app/src/main/res/layout/fragment_main_menu.xml
@@ -5,19 +5,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="28dp"
+    android:background="@drawable/background_cut"
     tools:context=".ui.MainMenuFragment">
 
     <!-- Título de la aplicación -->
-    <TextView
+    <ImageView
         android:id="@+id/textViewTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Brain Master"
-        android:textSize="48sp"
-        android:textStyle="bold"
+        android:layout_width="220dp"
+        android:layout_height="120dp"
+        android:src="@drawable/logo_quizz"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -25,7 +26,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewTitle">
 
@@ -51,7 +52,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categoryTextInputLayoutCategory">
 
@@ -74,13 +75,16 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Botón para iniciar el juego -->
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonStart"
-        android:layout_width="wrap_content"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Empezar Quiz"
-        android:textSize="20sp"
+        android:text="Start Quiz"
+        android:textSize="18sp"
+        android:background="@drawable/custom_button_background"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categoryTextInputLayoutDifficulty" />
