--- a/BrainMaster/app/src/main/res/values-night/themes.xml
+++ b/BrainMaster/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,8 @@
     <style name="Base.Theme.BrainMaster" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:statusBarColor">@color/button_orange</item>
+        <item name="android:navigationBarColor">@color/button_orange</item>
     </style>
+
 </resources>
