--- a/BrainMaster/app/src/main/res/navigation/nav_graph.xml
+++ b/BrainMaster/app/src/main/res/navigation/nav_graph.xml
@@ -21,6 +21,9 @@
         android:label="fragment_quiz"
         tools:layout="@layout/fragment_quiz" >
         <action
+            android:id="@+id/action_quizFragment_to_mainMenuFragment"
+            app:destination="@id/mainMenuFragment" />
+        <action
             android:id="@+id/action_quizFragment_to_resultFragment"
             app:destination="@id/resultFragment" />
     </fragment>
