--- a/BrainMaster/app/src/main/res/layout/fragment_quiz.xml
+++ b/BrainMaster/app/src/main/res/layout/fragment_quiz.xml
@@ -25,7 +25,7 @@
             tools:visibility="visible" />
 
         <ImageView
-            android:id="@+id/textViewTitle"
+            android:id="@+id/logoImage"
             android:layout_width="130dp"
             android:layout_height="80dp"
             android:src="@drawable/logo_quizz"
@@ -74,8 +74,9 @@
             android:id="@+id/textViewQuestion"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="70dp"
             android:gravity="center"
+            android:textColor="@color/textColorPrimary"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -84,6 +85,20 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.3"
             tools:text="¿Cuál es la capital de Francia?" />
+
+        <TextView
+            android:id="@+id/categoryName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:textSize="14sp"
+            android:textColor="@color/textColorSecondary"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="@id/textViewQuestion"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/logoImage"
+            tools:text="Geography" />
 
         <LinearLayout
             android:id="@+id/answersContainer"
