--- a/BrainMaster/app/src/main/res/layout/fragment_result.xml
+++ b/BrainMaster/app/src/main/res/layout/fragment_result.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.ResultFragment">
 
     <ImageView
-        android:id="@+id/textViewTitle"
+        android:id="@+id/logoImage"
         android:layout_width="130dp"
         android:layout_height="80dp"
         android:src="@drawable/logo_quizz"
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="¡Game is Over!"
+        android:textColor="@color/textColorPrimary"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textSize="24sp"
+        android:textColor="@color/textColorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewResultTitle"
@@ -50,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        app:cardBackgroundColor="#000000"
+        app:cardBackgroundColor="@color/black"
         app:cardCornerRadius="100dp"
         app:cardElevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
