--- a/BrainMaster/app/src/main/res/values/colors.xml
+++ b/BrainMaster/app/src/main/res/values/colors.xml
@@ -9,4 +9,10 @@
     <color name="stroke_color">#371048</color>
     <color name="button_orange">#FFAC3A</color>
 
+    <!-- Colores semánticos para el tema claro -->
+    <color name="textColorPrimary">#000000</color> <!-- Negro para el texto principal -->
+    <color name="textColorSecondary">#949191</color>
+    <color name="backgroundColor">#FFFFFF</color> <!-- Fondo blanco -->
+    <color name="dropdownBackgroundColor">#F1F1F1</color> <!-- Fondo del dropdown -->
+
 </resources>
